--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Flocker 0.3.0dev1 (2014-10-08)
-==============================
+Flocker 0.3.0 (2014-10-21)
+==========================
 
 - ``geard`` has been removed in favour of direct interaction with the Docker API. (#774, #712)
 - Fig compatible application configuration support. (#649)
