--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Flocker 0.3.1 (2014-11-18)
+==========================
+
+* Applications can now be configured with a CPU and memory limit. (FLOC-963, FLOC-962)
+* Added instructions for installing ``flocker-node`` on Fedora20. (FLOC-970)
+* Added instructions for deploying ``flocker-node`` on three popular cloud services: Amazon EC2, Rackspace, and DigitalOcean. (FLOC-984, FLOC-985, FLOC-983)
+
+
 Flocker 0.3.0 (2014-10-21)
 ==========================
 
