--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Flocker 0.3.2 (2014-11-19)
 ==========================
-- Minor fixes to the ``flocker-node`` installation documentation. (FLOC-1007)
+
+- Documented how to configure the firewall during ``flocker-node`` installation on certain cloud platforms. (FLOC-1007)
 
 Flocker 0.3.1 (2014-11-18)
 ==========================
