--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Flocker 0.3.3dev3 (2015-01-06)
+==============================
+
+- Applications can now be configured with a limit on the maximum size of their volume. (FLOC-729)
+- Applications can now be configured with an automatic restart policy. (FLOC-727)
+- Docker 1.2 is now required. (FLOC-721)
+
 Flocker 0.3.2 (2014-11-19)
 ==========================
 
